@@ -1,3 +1,8 @@
+2004-07-01  Savin Zlobec  <savin@elatec.si> 
+
+        * src/synthdisk.c:
+        Updated to work with the new DISK_CHANNEL macro definition.
+
 2004-01-15  Nick Garnett  <nickg@calivar.com>
 
 	* cdl/synthdisk.cdl:
